--- a/style.css
+++ b/style.css
@@ -792,11 +792,6 @@ footer {
 
     }
 
-    /* .contact-Container {
-        padding-top: 50px;
-        margin-top: 0px;
-    } */
-
 
     .sidebar nav li {
         display: flex;
@@ -840,7 +835,7 @@ footer {
 
     .infoContainer {
         flex-direction: column;
-        padding-top: 0px;
+        padding-top: 30px;
         margin-left: 30px;
     }
 
@@ -903,9 +898,11 @@ footer {
     }
 
     .devPic img {
+        position:relative;
         width: 45vw;
         margin-left: 200px;
         margin-top: -65px;
+        z-index:-1;
     }
 
     .devInfo {
@@ -918,7 +915,7 @@ footer {
 @media screen and (max-width:600px) {
 
     .main-skills {
-        padding: 50px 20px;
+        padding: 70px 15px;
     }
 
     .main-skills p {
@@ -996,7 +993,7 @@ footer {
 @media screen and (max-width:350px) {
 
     .main-skills {
-        padding: 50px 15px;
+        padding: 70px 10px;
     }
 
     .skill {
@@ -1037,7 +1034,7 @@ footer {
 @media (max-width:600px) {
     .work-container {
         width: 100vw;
-        padding: 50px 10px;
+        padding: 70px 10px;
     }
 
     .project-box {
@@ -1047,7 +1044,7 @@ footer {
 
 @media (max-width:350px) {
     .work-container {
-        padding: 50px 4px;
+        padding: 70px 4px;
     }
 
     .project-box {
@@ -1062,7 +1059,7 @@ footer {
 /* >>>Contact-Form-media>>>> */
 @media screen and (max-width:750px) {
     .contact-Container {
-        margin: 0px 15px;
+        margin: 70px 15px;
         padding-top: 50px;
     }
 
@@ -1109,40 +1106,10 @@ footer {
 }
 
 /* >>>About-media>>>> */
-@media (max-width: 600px) {
-
-    .about-container {
-        padding: 50px 15px;
-    }
-
-    .info-col-1 {
-        font-size: 1.3em;
-        margin-top: 0.3em;
-        padding-bottom: 3px;
-    }
-
-    .gd1 {
-        margin-top: 1em;
-    }
-
-    .gd2 {
-        margin-top: 1em;
-    }
-
-    .year {
-        margin: 0px 0.5em;
-        font-size: 2em;
-    }
-
-    .gd3 {
-        margin-top: 0.6rem;
-    }
-}
-
 @media (max-width:600px) {
 
     .about-Container {
-        padding: 50px 15px;
+        padding: 70px 15px;
     }
     
     .info-col-1 {
@@ -1172,7 +1139,7 @@ footer {
 @media (max-width:350px) {
 
     .about-Container {
-        padding: 50px 8px;
+        padding: 70px 8px;
     }
 
     .gen-info-1 {
