--- a/style.css
+++ b/style.css
@@ -709,7 +709,7 @@ footer {
 @media (max-width:900px) {
 
     .sidebar img {
-        width: 75px;
+        width: 85px;
         padding-top: 35px;
     }
 
@@ -719,7 +719,7 @@ footer {
 
 
     .sidebar nav li {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
         padding: 0.7rem 0;
     }
 
@@ -839,7 +839,7 @@ footer {
 
     .devInfo {
         font-size: 15px;
-        margin-top: 60px;
+        margin-top: 70px;
     } 
 
 
@@ -864,7 +864,7 @@ footer {
     }
 
     .social img {
-        width: 18px;
+        width: 21px;
         margin: 8px;
     }
 }  
@@ -924,7 +924,7 @@ footer {
 @media screen and (max-width:600px) {
 
     .main-skills {
-        padding: 50px 20px;
+        padding: 70px 20px;
     }
 
     .main-skills p {
@@ -1069,7 +1069,7 @@ footer {
 @media screen and (max-width:750px) {
     .contact-Container {
         margin: 0px 15px;
-        padding-top: 50px;
+        padding-top: 70px;
     }
 
     .contactform {
@@ -1079,7 +1079,7 @@ footer {
 
     .contactform h1 {
         padding: 14px 7px;
-        font-size: 17px;
+        font-size: 20px;
     }
 
     .form-control {
@@ -1087,19 +1087,20 @@ footer {
     }
 
     .mb-3 input {
-        font-size: 12px;
+        font-size: 14px;
         text-align: left;
+        padding-left: 3px;
     }
 
     .enquiry {
         height: 130px;
-        font-size: 12px;
+        font-size: 14px;
         font-weight: 700;
         cursor: pointer;
     }
 
     .e-help {
-        font-size: 7px;
+        font-size: 9px;
     }
 
     .form-check-input {
@@ -1109,7 +1110,7 @@ footer {
 
     .btn-primary {
         width: 85vw;
-        margin: 12px 0px;
+        margin: 14px 0px;
         margin-bottom: 30px;
     }
 }
