--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ h4 {
 .open-popup {
     visibility: visible;
     top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%) scale(1);
 }
 
@@ -875,7 +876,7 @@ footer {
     .arrow {
         position: fixed;
         width: 21px;
-        margin-left: 229px;
+        margin-left: 210px;
     }
 
     footer{
@@ -933,7 +934,7 @@ footer {
     }
 
     .btn-box {
-        width: 151.5px;
+        width: 155px;
         height: 28px;
     }
 
