--- a/style.css
+++ b/style.css
@@ -948,7 +948,7 @@ footer {
     }
 
     .btn-box {
-        width: 150px;
+        width: 155px;
         height: 28px;
         background-color: white;
     }
@@ -956,6 +956,7 @@ footer {
     .btn {
         font-size: 15px;
         padding: 0.3rem 0.8rem;
+        width: 120px;
     }
     
     .btn-box img {
@@ -1164,24 +1165,25 @@ footer {
     }
 
     .mb-3 input {
-        font-size: 16px;
+        font-size: 18px;
         text-align: left;
-        padding-left: 5px;
+        padding: 11px 0px;
+        padding-left: 8px;
     }
 
     .enquiry {
-        height: 150px;
-        font-size: 16px;
+        height: 180px;
+        font-size: 18px;
         font-weight: 700;
         cursor: pointer;
-        margin-left: 5px;
+        margin-left: 8px;
     }
 
     .btn-primary {
         width: 85vw;
         margin: 12px 0px;
         margin-bottom: 30px;
-        margin-left: 5px;
+        margin-left: 8px;
         color: black;
         background-color: white;
     }
