--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ footer {
 }
 
 .btn {
-    padding: 0.3rem 0.8rem;
+    padding: 0.3rem 0.6rem;
     font-size: 18px;
     font-weight: bold;
     cursor: default;
@@ -833,7 +833,7 @@ footer {
 
     .f-name {
         font-size: 2rem;
-        margin: 5px 0px;
+        margin: 8px 0px;
     }
 
 }
@@ -859,13 +859,13 @@ footer {
     }
     
     .moreabout-1 .inner-about {
-        font-size: 1.1em;
+        font-size: 1.3em;
         padding-bottom: 20px;
     }
 
     .moreabout-content .detail {
         margin-top: 5px;
-        font-size: 1.1em;
+        font-size: 1.3em;
     }
 
      .sidebar {
@@ -937,6 +937,7 @@ footer {
     
     .sidebar nav li{
        padding: 1.3rem 0;
+       font-size: 1.2rem;
     } 
 
     .infoContainer{
@@ -947,13 +948,13 @@ footer {
     }
 
     .devInfo{
-        width: 170px;
+        width: 200px;
         height: 350px;
     }
     
     .devPic img {
-        width: 45vw;
-        height: 50vh;
+        width: 40vw;
+        height: 40vh;
     }
 
     .btn-box {
@@ -964,7 +965,7 @@ footer {
 
     .btn {
         font-size: 15px;
-        padding: 0.3rem 0.8rem;
+        padding: 0.3rem 0.6rem;
     }
     
     .btn-box img {
@@ -989,17 +990,13 @@ footer {
 @media (max-width:380px) {
 
     .moreabout-2 {
-        width: 250px;
+        width: 300px;
         margin-left: 5px;
     }
 
     .devInfo {
         padding-left: 5px;
-        width: 120px;
-    }
-
-    .devPic img{
-        width: 50vw;
+        width: 150px;
     }
 
 }
