--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poltawski+Nowy&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex&display=swap');
 
 * {
     margin: 0;
@@ -20,16 +20,19 @@ body{
 h1 {
     font-size: 2rem;
     color: white;
+    font-family: 'Roboto Flex', sans-serif;
 }
 
 h2 {
     font-size: 1.6rem;
     color: white;
+    font-family: 'Roboto Flex', sans-serif;
 }
 
 h3 {
     font-size: 1.3rem;
     color: white;
+    font-family: 'Roboto Flex', sans-serif;
 }
 
 h4 {
@@ -37,6 +40,7 @@ h4 {
     color: white;
     border-bottom: 2px solid white;
     display: inline-block;
+    font-family: 'Roboto Flex', sans-serif;
 }
 
 
@@ -122,12 +126,14 @@ h4 {
     margin: 7px 0px;
     font-weight: bold;
     text-shadow: 1px 1px 3px var(--primary-color);
+    font-family: 'Roboto Flex', sans-serif;
 }
 
 .f-name-1 {
     /* color: #624466; */
     text-shadow: 1px 1px 1px #36093d;
     border-bottom: none;
+    font-family: 'Roboto Flex', sans-serif;
 }
 
 .sidebar nav {
@@ -147,6 +153,7 @@ h4 {
     text-decoration: none;
     font-weight: 700;
     color: white;
+    font-family: 'Roboto Flex', sans-serif;
 }
 
 .sidebar nav li a:hover {
@@ -175,6 +182,7 @@ footer {
     margin-top: 0.5rem;
     font-size: 0.7rem;
     font-weight: 900;
+    font-family: 'Roboto', sans-serif;
 }
 
 .infoContainer {
@@ -194,8 +202,6 @@ footer {
     display: flex;
     justify-content: end;
     flex-direction: column;
-    font-family: 'Fira Sans', sans-serif;
-    /* font-size: 20px; */
     padding: 0px 15px;
     padding-left: 70px;
     /* text-align: justify; */
@@ -207,21 +213,20 @@ footer {
     position: absolute;
     top: 45px;
     left: 85px;
-    font-family: 'Libre Baskerville', serif;
-    /* font-family: 'Poltawski Nowy', serif; */
 }
 
 .intro .name {
     font-size: 3.5em;
     color: white;
     letter-spacing: 2px;
-    font-weight: 900;
+    font-weight: 700;
+    font-family: 'Roboto Flex', sans-serif;
 }
 .intro .about {
     font-size: 2.2em;
     font-weight: 500;
-    color: white;
     margin-top: 5px;
+    color: rgb(214 225 225);
 }
 
 .moreabout-1 img {
@@ -237,7 +242,7 @@ footer {
     margin-top: 8px;
     color: rgb(214 225 225);
     padding-bottom: 30px;
-    font-family: 'Satisfy', cursive;
+    font-family: 'Roboto', sans-serif;
 }
 
 .devPic img{
@@ -279,7 +284,8 @@ footer {
 .moreabout-content .detail {
     margin-top: 8px;
     font-size: 1.3em;
-    font-family: 'Satisfy', cursive;
+    color: rgb(214 225 225);
+    font-family: 'Roboto', sans-serif;
 }
 
 .social {
@@ -375,7 +381,7 @@ footer {
 
 
 .contactform h1 {
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Roboto Flex', sans-serif;
     padding: 20px 10px;
     font-size: 22px;
     font-weight: 900;
@@ -463,14 +469,13 @@ footer {
     flex-wrap: wrap;
 }
 
-
 .main-head p {
     font-size: 0.9em;
     font-weight: 300;
     padding-top: 0.8em;
-    color: white;
+    color: rgb(214 225 225);
+    font-family: 'Roboto', sans-serif;
 }
-
 
 .big-box {
     padding-top: 1.5em;
@@ -550,8 +555,8 @@ footer {
     margin-top: 0.7rem;
 }
 
-/* skills section >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 
+/* skills section >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 .main-skills {
     padding: 20px 80px;
     padding-top: 45px;
@@ -560,8 +565,8 @@ footer {
 .main-skills p {
     margin-top: 8px;
     margin-bottom: 15px;
-    color: white;
-
+    color: rgb(214 225 225);
+    font-family: 'Roboto', sans-serif;
 }
 
 .main-2 {
@@ -732,7 +737,8 @@ footer {
 
 #work-p {
     margin: 15px 0px;
-    color: white;
+    color: rgb(214 225 225);
+    font-family: 'Roboto', sans-serif;
 }
 
 #box-container {
@@ -792,7 +798,8 @@ footer {
 
 .box p {
     font-size: 16px;
-    color: white;
+    color: rgb(214 225 225);
+    font-family: 'Roboto', sans-serif;
     margin-top: 4px;
 }
 
